--- a/OakNotes.Api/packages.config
+++ b/OakNotes.Api/packages.config
@@ -10,4 +10,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="NLog" version="4.4.12" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.12" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.12" targetFramework="net461" />
 </packages>
